--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,55 +1,41 @@
 # ModelMuxer Code Owners
+# This file defines who owns different parts of the codebase
+# and who should be automatically requested for reviews
 
-## This file defines who owns different parts of the codebase
+# Global owner - default for everything unless overridden
+* @iamapsrajput
 
-## and who should be automatically requested for reviews
-
-## Global owners - these users are owners of everything in the repo
-
-## unless a later match takes precedence
-
-- @iamapsrajput
-
-## Core application code
-
+# Core application code
 /app/ @iamapsrajput
-/app/main.py @iamapsrajput
-/app/main_enhanced.py @iamapsrajput
 /app/config/ @iamapsrajput
 /app/providers/ @iamapsrajput
 /app/routing/ @iamapsrajput
 /app/security/ @iamapsrajput
 
-## Test files
-
+# Tests
 /tests/ @iamapsrajput
 
-## Infrastructure and deployment
-
+# Infrastructure and deployment
 /infra/ @iamapsrajput
 /.github/ @iamapsrajput
-/docker\* @iamapsrajput
+/docker* @iamapsrajput
 /k8s/ @iamapsrajput
 /Makefile @iamapsrajput
 /pyproject.toml @iamapsrajput
 /poetry.lock @iamapsrajput
 
-## Documentation
-
+# Documentation
 /docs/ @iamapsrajput
 README.md @iamapsrajput
-SECURITY.md @iamapsrajput
 LICENSE @iamapsrajput
 
-## Security and compliance files
-
+# Security and compliance
 /scripts/check_license_compliance.py @iamapsrajput
 /scripts/verify_security_setup.py @iamapsrajput
 /compliance/ @iamapsrajput
 SECURITY.md @iamapsrajput
 
-## Configuration files
-
+# Configuration files
 /.env.example @iamapsrajput
 /pytest.ini @iamapsrajput
 /.gitignore @iamapsrajput
