--- a/.github/workflows/code-quality.yaml
+++ b/.github/workflows/code-quality.yaml
@@ -146,11 +146,29 @@ jobs:
       - name: Run performance benchmarks
         run: |
           if [ -d "tests/performance" ]; then
+            echo "Running performance benchmarks..."
             poetry run pytest tests/performance/ \
-              --benchmark-json=benchmark-results.json || true
+              --benchmark-json=benchmark-results.json \
+              --benchmark-only \
+              -v || {
+              echo "Benchmark tests failed, creating minimal benchmark file"
+              echo '{"benchmarks": [], "machine_info": {"node": "github-actions"}}' > benchmark-results.json
+            }
+
+            # Verify the JSON file was created and is valid
+            if [ -f "benchmark-results.json" ]; then
+              echo "Benchmark file created successfully"
+              python -m json.tool benchmark-results.json > /dev/null && echo "JSON is valid" || {
+                echo "Invalid JSON, creating fallback"
+                echo '{"benchmarks": [], "machine_info": {"node": "github-actions"}}' > benchmark-results.json
+              }
+            else
+              echo "No benchmark file created, creating fallback"
+              echo '{"benchmarks": [], "machine_info": {"node": "github-actions"}}' > benchmark-results.json
+            fi
           else
             echo "No performance tests found, creating empty benchmark file"
-            echo '{"benchmarks": []}' > benchmark-results.json
+            echo '{"benchmarks": [], "machine_info": {"node": "github-actions"}}' > benchmark-results.json
           fi
 
       - name: Store benchmark result
@@ -164,6 +182,9 @@ jobs:
           comment-on-alert: true
           alert-threshold: "200%"
           fail-on-alert: false
+          name: "Performance Benchmarks"
+          gh-pages-branch: "gh-pages"
+          benchmark-data-dir-path: "dev/bench"
 
       - name: Upload performance reports
         uses: actions/upload-artifact@v4
