🚀 FEATURE: Complete LiteLLM provider integration
✅ IMPLEMENTATION:
- Added LiteLLM dependency (v1.55.0) with tiktoken compatibility
- Implemented comprehensive LiteLLM provider with full feature parity
- Added LiteLLM provider initialization in main.py
- Updated configuration validation to support LiteLLM proxy

✅ TESTING:
- 18 comprehensive unit tests for LiteLLM provider
- 11 integration tests with routing system
- 12 performance benchmark tests
- All tests passing with 80% provider coverage

✅ FEATURES:
- Chat completions with streaming support
- Cost calculation and optimization
- Rate limiting and error handling
- Health monitoring and availability checks
- Custom model configuration support
- Seamless integration with existing routing strategies

✅ DOCUMENTATION:
- Updated README.md with LiteLLM setup instructions
- Created comprehensive LiteLLM provider documentation
- Added configuration examples and troubleshooting guide
- Updated environment configuration examples

✅ PRODUCTION READY:
- Full error handling and logging
- Security middleware compatibility
- Performance optimized with connection pooling
- Comprehensive monitoring and health checks

🔧 TECHNICAL DETAILS:
- Supports both authenticated and unauthenticated LiteLLM proxies
- Dynamic model management and pricing configuration
- Fallback support when LiteLLM proxy unavailable
- Compatible with all existing ModelMuxer features

📊 COVERAGE:
- 41 new tests added (100% passing)
- LiteLLM provider: 80% code coverage
- Integration tests: 100% passing
- Benchmark tests: Performance validated

This integration enables access to 100+ LLM models through LiteLLM
while maintaining ModelMuxer's intelligent routing and cost optimization.

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,14 @@ TOGETHER_API_KEY=your-together-api-key-here
 COHERE_API_KEY=your-cohere-api-key-here
 
 # =============================================================================
+# LiteLLM Proxy Configuration (Optional)
+# =============================================================================
+# LiteLLM proxy allows you to use multiple LLM providers through a single endpoint
+# Base URL is required, API key is optional depending on proxy configuration
+LITELLM_BASE_URL=http://localhost:4000
+LITELLM_API_KEY=your-litellm-api-key-here
+
+# =============================================================================
 # Server Configuration
 # =============================================================================
 HOST=0.0.0.0
