feat: Implement intent classification for enhanced routing
- Added intent classification feature to improve routing decisions based on user input.
- Introduced a lightweight classifier that extracts features from messages to determine intent.
- Configured environment variables for enabling the intent classifier and setting confidence thresholds.
- Updated models to include intent-related metadata in responses.
- Enhanced the main application logic to integrate intent classification into the routing process.
- Added comprehensive tests for the intent classifier, ensuring accuracy and reliability.

This feature enhances the ModelMuxer’s ability to intelligently route requests by understanding user intent, leading to better performance and user experience.

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,35 @@
+# ModelMuxer example environment configuration
+
+# --- Provider API Keys (optional) ---
+# OPENAI_API_KEY=
+# ANTHROPIC_API_KEY=
+# MISTRAL_API_KEY=
+# GROQ_API_KEY=
+
+# --- LiteLLM proxy (optional) ---
+# LITELLM_BASE_URL=
+# LITELLM_API_KEY=
+
+# --- Observability ---
+# ENABLE_TRACING=true
+# ENABLE_METRICS=true
+# OTEL_EXPORTER_OTLP_ENDPOINT=
+
+# --- Server ---
+# SERVER_HOST=0.0.0.0
+# SERVER_PORT=8000
+# SERVER_DEBUG=false
+
+# --- Router Defaults ---
+# ROUTER_DEFAULT_MODEL=gpt-3.5-turbo
+
+# --- Intent Classifier (Phase 1) ---
+ROUTER_INTENT_CLASSIFIER_ENABLED=true
+INTENT_LOW_CONFIDENCE=0.4
+INTENT_MIN_CONF_FOR_DIRECT=0.7
+
+# --- Test Mode ---
+# TEST_MODE=false
 # =============================================================================
 # ModelMuxer Environment Configuration
 # =============================================================================
