feat: Enhance direct provider architecture and routing capabilities
- Removed LiteLLM provider dependencies, streamlining the routing process to focus on direct providers.
- Introduced budget thresholds for cost management, allowing users to set maximum estimated costs per request.
- Updated routing logic to validate model names and ensure compliance with new naming conventions.
- Enhanced telemetry metrics to include cost and estimated response time data for improved monitoring.
- Added comprehensive tests for direct provider functionality, including budget constraints and architecture validation.

These changes improve the overall efficiency and maintainability of the ModelMuxer routing system, ensuring better performance and cost control.

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,34 @@
 # ModelMuxer example environment configuration
 
-# --- Provider API Keys (optional) ---
-# OPENAI_API_KEY=
-# ANTHROPIC_API_KEY=
-# MISTRAL_API_KEY=
-# GROQ_API_KEY=
+# =============================================================================
+# Routing Strategy Configuration
+# =============================================================================
+# ModelMuxer now uses direct provider connections as the primary routing method.
+# This provides better control, lower latency, and more detailed error handling.
 
-# --- LiteLLM proxy (optional) ---
-# LITELLM_BASE_URL=
-# LITELLM_API_KEY=
+# =============================================================================
+# Direct Provider Architecture
+# =============================================================================
+# ModelMuxer uses direct provider connections for optimal performance.
+# Pricing is managed centrally in scripts/data/prices.json for consistency.
+# Provider availability is determined by API key configuration below.
+
+# --- Direct Provider Configuration (Primary) ---
+# Direct provider API keys (recommended approach)
+# At least one provider API key is required for routing to work
+OPENAI_API_KEY=sk-your-openai-key-here
+ANTHROPIC_API_KEY=sk-ant-your-anthropic-key-here
+MISTRAL_API_KEY=your-mistral-key-here
+GROQ_API_KEY=gsk_your-groq-key-here
+GOOGLE_API_KEY=your-google-api-key-here
+COHERE_API_KEY=your-cohere-key-here
+TOGETHER_API_KEY=your-together-api-key-here
+
+# Provider adapters enabled (default: true)
+PROVIDER_ADAPTERS_ENABLED=true
+
+# Note: Direct-only mode is always enabled in code (no configuration flag required)
+
 
 # --- Observability ---
 # ENABLE_TRACING=true
@@ -35,22 +55,6 @@ INTENT_MIN_CONF_FOR_DIRECT=0.7
 # =============================================================================
 # Copy this file to .env and update with your actual values
 # Never commit .env files with real credentials to version control
-
-# =============================================================================
-# API Keys Configuration
-# =============================================================================
-# LLM Provider API Keys (Required - at least one provider)
-OPENAI_API_KEY=sk-your-openai-key-here
-ANTHROPIC_API_KEY=sk-ant-your-anthropic-key-here
-MISTRAL_API_KEY=your-mistral-key-here
-GOOGLE_API_KEY=your-google-api-key-here
-GROQ_API_KEY=gsk_your-groq-key-here
-TOGETHER_API_KEY=your-together-api-key-here
-COHERE_API_KEY=your-cohere-api-key-here
-
-# LiteLLM Proxy Configuration (Optional)
-LITELLM_BASE_URL=http://localhost:4000
-LITELLM_API_KEY=your-litellm-api-key-here
 
 # ModelMuxer API Key for CLI
 MODELMUXER_API_KEY=your-api-key-here
@@ -126,10 +130,12 @@ RATE_LIMIT_ENABLED=true
 MONITORING_ENABLED=true
 CACHE_ENABLED=true
 
+# Provider Configuration (Direct connections only)
+PROVIDER_ADAPTERS_ENABLED=true
+
 # Routing Features
 ENABLE_SEMANTIC_ROUTING=true
 ENABLE_CASCADE_ROUTING=true
-ENABLE_LITELLM=true
 
 # =============================================================================
 # Router Configuration
@@ -145,59 +151,29 @@ COMPLEXITY_THRESHOLD=0.2
 SIMPLE_QUERY_MAX_LENGTH=100
 
 # =============================================================================
-# Provider Pricing (Cost per million tokens)
+# Pricing and Cost Estimation Configuration
 # =============================================================================
-# OpenAI Pricing
-OPENAI_GPT4O_INPUT_PRICE=5.0
-OPENAI_GPT4O_OUTPUT_PRICE=15.0
-OPENAI_GPT4O_MINI_INPUT_PRICE=0.15
-OPENAI_GPT4O_MINI_OUTPUT_PRICE=0.6
-OPENAI_GPT35_TURBO_INPUT_PRICE=0.5
-OPENAI_GPT35_TURBO_OUTPUT_PRICE=1.5
-OPENAI_GPT4_INPUT_PRICE=30.0
-OPENAI_GPT4_OUTPUT_PRICE=60.0
-OPENAI_GPT4_TURBO_INPUT_PRICE=10.0
-OPENAI_GPT4_TURBO_OUTPUT_PRICE=30.0
+# Price table file path (JSON format with direct provider pricing data)
+PRICE_TABLE_PATH=./scripts/data/prices.json
 
-# Anthropic Pricing
-ANTHROPIC_CLAUDE_35_SONNET_INPUT_PRICE=3.0
-ANTHROPIC_CLAUDE_35_SONNET_OUTPUT_PRICE=15.0
-ANTHROPIC_CLAUDE_3_HAIKU_INPUT_PRICE=0.25
-ANTHROPIC_CLAUDE_3_HAIKU_OUTPUT_PRICE=1.25
-ANTHROPIC_CLAUDE_3_OPUS_INPUT_PRICE=15.0
-ANTHROPIC_CLAUDE_3_OPUS_OUTPUT_PRICE=75.0
+# Latency priors configuration (time window for measurements in seconds)
+LATENCY_PRIORS_WINDOW_S=1800
 
-# Mistral Pricing
-MISTRAL_SMALL_INPUT_PRICE=0.2
-MISTRAL_SMALL_OUTPUT_PRICE=0.6
-MISTRAL_MEDIUM_INPUT_PRICE=2.7
-MISTRAL_MEDIUM_OUTPUT_PRICE=8.1
-MISTRAL_LARGE_INPUT_PRICE=8.0
-MISTRAL_LARGE_OUTPUT_PRICE=24.0
+# Default token counts for cost estimation when not provided
+ESTIMATOR_DEFAULT_TOKENS_IN=400
+ESTIMATOR_DEFAULT_TOKENS_OUT=300
 
-# Google Pricing
-GOOGLE_GEMINI_PRO_INPUT_PRICE=0.5
-GOOGLE_GEMINI_PRO_OUTPUT_PRICE=1.5
-GOOGLE_GEMINI_PRO_VISION_INPUT_PRICE=0.5
-GOOGLE_GEMINI_PRO_VISION_OUTPUT_PRICE=1.5
+# Note: Individual model pricing is now managed centrally in prices.json
+# This provides better maintainability and consistency across deployments
 
-# Groq Pricing
-GROQ_LLAMA2_70B_INPUT_PRICE=0.7
-GROQ_LLAMA2_70B_OUTPUT_PRICE=0.8
-GROQ_MIXTRAL_8X7B_INPUT_PRICE=0.2
-GROQ_MIXTRAL_8X7B_OUTPUT_PRICE=0.2
+# =============================================================================
+# Budget Thresholds Configuration
+# =============================================================================
+# Maximum estimated USD cost per request before budget exceeded error
+# Typical values: 0.05 (conservative), 0.08 (balanced), 0.15 (permissive)
+MAX_ESTIMATED_USD_PER_REQUEST=0.08
 
-# Cohere Pricing
-COHERE_COMMAND_INPUT_PRICE=1.0
-COHERE_COMMAND_OUTPUT_PRICE=2.0
-COHERE_COMMAND_LIGHT_INPUT_PRICE=0.3
-COHERE_COMMAND_LIGHT_OUTPUT_PRICE=0.6
 
-# Together AI Pricing
-TOGETHER_LLAMA2_70B_INPUT_PRICE=0.7
-TOGETHER_LLAMA2_70B_OUTPUT_PRICE=0.8
-TOGETHER_MIXTRAL_8X7B_INPUT_PRICE=0.2
-TOGETHER_MIXTRAL_8X7B_OUTPUT_PRICE=0.2
 
 # =============================================================================
 # Legacy Configuration (for backward compatibility)
