--- a/pytest.ini
+++ b/pytest.ini
@@ -17,6 +17,10 @@ markers =
     enterprise: marks tests for enterprise features
     security: marks tests for security features
     performance: marks tests for performance benchmarking
+    direct: Tests for direct provider routing functionality
+    integration_direct: marks tests as end-to-end direct provider integration tests
+    architecture: Tests for architecture validation and compliance
+    comprehensive: Comprehensive validation tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
