--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "modelmuxer"
-version = "1.0.0"
+version = "2.0.0"
 description = "Enterprise-grade intelligent LLM routing engine for cost and performance optimization"
 authors = ["Ajay Rajput <ajay@modelmuxer.com>"]
 license = "Business Source License 1.1"
@@ -45,14 +45,12 @@ sqlalchemy = "^2.0.0"
 alembic = "^1.12.0"
 aiosqlite = "^0.21.0"
 structlog = "^23.2.0"
-# Tiktoken for OpenAI tokenization and LiteLLM compatibility
+# Tiktoken for OpenAI tokenization
 tiktoken = "^0.7.0"
 tenacity = "^8.2.0"
 cachetools = "^5.3.0"
 psutil = "^5.9.0"
 pyjwt = { extras = ["cryptography"], version = "^2.10.1" }
-# LiteLLM for unified LLM API access
-litellm = "^1.55.0"
 # Enterprise features
 asyncpg = "^0.30.0"
 cryptography = "^44.0.2"
