--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,6 +77,8 @@ pip-audit = "^2.6.0"
 types-psutil = "^7.0.0.20250801"
 interrogate = "^1.7.0"
 pip-licenses = "^5.0.0"
+basedpyright = "^1.31.3"
+types-sqlalchemy = "^1.4.53.38"
 
 [tool.poetry.group.jupyter]
 optional = true
@@ -102,10 +104,11 @@ scikit-learn = "^1.3.0"
 optional = true
 
 [tool.poetry.group.monitoring.dependencies]
-prometheus-client = "^0.19.0"
+prometheus-client = "^0.22.1"
 opentelemetry-api = "^1.20.0"
 opentelemetry-sdk = "^1.20.0"
 opentelemetry-instrumentation-fastapi = "^0.41b0"
+opentelemetry-exporter-otlp-proto-grpc = "^1.20.0"
 
 [tool.poetry.scripts]
 modelmuxer = "app.main:cli"
@@ -136,6 +139,17 @@ extend-exclude = '''
 [tool.ruff]
 target-version = "py311"
 line-length = 100
+preview = true
+exclude = [
+    ".venv",
+    "build",
+    "dist",
+    ".git",
+    ".mypy_cache",
+    ".pytest_cache",
+    "htmlcov",
+    "*.egg-info",
+]
 
 [tool.ruff.lint]
 select = [
@@ -247,18 +261,6 @@ ignore = [
     "SIM103",  # return the condition directly
     "ISC001",  # conflicts with formatter
 ]
-exclude = [
-    ".venv",
-    "build",
-    "dist",
-    ".git",
-    ".mypy_cache",
-    ".pytest_cache",
-    "htmlcov",
-    "*.egg-info",
-    "tests",         # Exclude tests from strict linting
-    "scripts",       # Exclude scripts from strict linting
-]
 
 [tool.ruff.per-file-ignores]
 "__init__.py" = ["F401"]
@@ -288,6 +290,35 @@ exclude = [
     "app/middleware/*",
     "app/enterprise/*",
     "tests/*",
+]
+
+[tool.basedpyright]
+pythonVersion = "3.11"
+typeCheckingMode = "basic"
+useLibraryCodeForTypes = true
+reportUnknownMemberType = false
+reportUnusedCallResult = false
+reportMissingTypeStubs = false
+reportIncompatibleVariableOverride = false
+reportAttributeAccessIssue = "warning"
+reportOptionalSubscript = "warning"
+reportOptionalMemberAccess = "warning"
+reportOptionalCall = "warning"
+exclude = [
+    "**/.venv/**",
+    "**/tests/**",
+    "app/routing/**",
+    "app/providers/**",
+    "app/config/enhanced_config.py",
+    "app/classification/**",
+]
+ignore = [
+    "app/main.py",
+    "app/router.py",
+    "app/database.py",
+    "app/cost_tracker.py",
+    "app/security/**",
+    "app/middleware/**",
 ]
 
 [[tool.mypy.overrides]]
