--- a/infra/docker-compose.simple.yaml
+++ b/infra/docker-compose.simple.yaml
@@ -1,3 +1,5 @@
+# ModelMuxer (c) 2025 Ajay Rajput
+# Licensed under Business Source License 1.1 – see LICENSE for details.
 version: '3.8'
 
 services:
