--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -130,8 +130,8 @@ jobs:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           image: ${{ needs.build.outputs.image-name }}:latest
-          args:
-            --severity-threshold=high --file=Dockerfile.alpine
+          sarif: true
+          args: --severity-threshold=high --file=infra/docker/Dockerfile.alpine
             --exclude-app-vulns
 
       - name: Upload Snyk results to GitHub Code Scanning
@@ -210,8 +210,7 @@ jobs:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
 
       - name: Create GitHub Release
-        if:
-          startsWith(github.ref, 'refs/tags/v') && needs.build.result ==
+        if: startsWith(github.ref, 'refs/tags/v') && needs.build.result ==
           'success'
         uses: actions/create-release@v1
         env:
