--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,15 +8,7 @@ readme = "README.md"
 homepage = "https://github.com/ajayrajput/modelmuxer"
 repository = "https://github.com/ajayrajput/modelmuxer"
 documentation = "https://modelmuxer.readthedocs.io"
-keywords = [
-    "llm",
-    "routing",
-    "ai",
-    "cost-optimization",
-    "api",
-    "enterprise",
-    "cascade-routing",
-]
+keywords = ["llm", "routing", "ai", "cost-optimization", "api", "enterprise", "cascade-routing"]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
     "Intended Audience :: Developers",
@@ -139,16 +131,7 @@ extend-exclude = '''
 target-version = "py311"
 line-length = 100
 preview = true
-exclude = [
-    ".venv",
-    "build",
-    "dist",
-    ".git",
-    ".mypy_cache",
-    ".pytest_cache",
-    "htmlcov",
-    "*.egg-info",
-]
+exclude = [".venv", "build", "dist", ".git", ".mypy_cache", ".pytest_cache", "htmlcov", "*.egg-info"]
 
 [tool.ruff.lint]
 select = [
@@ -321,14 +304,7 @@ ignore = [
 ]
 
 [[tool.mypy.overrides]]
-module = [
-    "sentence_transformers.*",
-    "sklearn.*",
-    "prometheus_client.*",
-    "tiktoken.*",
-    "opentelemetry.*",
-    "numpy.*",
-]
+module = ["sentence_transformers.*", "sklearn.*", "prometheus_client.*", "tiktoken.*", "opentelemetry.*", "numpy.*"]
 ignore_missing_imports = true
 
 # Temporarily allow untyped defs in complex modules during migration
@@ -366,5 +342,7 @@ exclude_lines = [
     "if 0:",
     "if __name__ == .__main__.:",
     "class .*\\bProtocol\\):",
+    "@(abc\\.)?abstractmethod",
+]
     "@(abc\\.)?abstractmethod",
 ]
