--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -161,10 +161,13 @@ jobs:
           virtualenvs-in-project: true
 
       - name: Install dependencies
-        run: poetry install --with dev
+        run: |
+          poetry install --with dev
+          # Ensure bandit is available (fallback if not in lock file)
+          poetry run pip install bandit
 
       - name: Run Bandit security scan
-        run: poetry run bandit -r app/ -f json -o bandit-report.json || true
+        run: poetry run bandit -r app/ -f json -o bandit-report.json -c .bandit || poetry run bandit -r app/ -f json -o bandit-report.json || true
 
       - name: Install Semgrep
         run: pip install --upgrade pip && pip install semgrep
