--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,7 @@ pre-commit = "^3.5.0"
 safety = "^2.3.0"
 isort = "^5.12.0"
 flake8 = "^6.0.0"
+bandit = "^1.8.6"
 pip-audit = "^2.6.0"
 types-psutil = "^7.0.0.20250801"
 interrogate = "^1.7.0"
